Fix home blog to show 4 posts on tablet

--- a/app/assets/stylus/pages/front-page.styl
+++ b/app/assets/stylus/pages/front-page.styl
@@ -181,7 +181,7 @@
                 @media screen and ( min-width $screen-md )
                     display block
 
-                @media screen and ( min-width $screen-md )
+                @media screen and ( min-width $screen-lg )
                     display none
 
         &-actions
